working on the seal page

--- a/html/system/seal.html
+++ b/html/system/seal.html
@@ -1574,7 +1574,7 @@
             <td class="seal_grass">火</td>
             <td>○</td>
             <td>Flame Grass<br>Dragon Grass</td>
-            <td class="text_left">Useful as a projectile that never runs out, but only deals a fixed 10 damage.<br>The fire attack animation is long, so the tempo of the game slows down.<br>Not recommended to have equipped when checking for traps.</td>
+            <td class="text_left">Useful as a projectile that never runs out, but only deals a fixed 10 damage.<br>The fire attack animation is long, so the pace of the game slows down.<br>Not recommended to have equipped when checking for traps.</td>
           </tr>
           <tr>
             <td class="seal_scroll">帰</td>
@@ -1660,76 +1660,131 @@
             <td class="seal_equipment">祓</td>
             <td>×</td>
             <td>Holy Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Protects weapons, shields, and bracelets from getting cursed.</td>
           </tr>
           <tr>
             <td class="seal_equipment">ト</td>
             <td>×</td>
             <td>Walrus Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Popular to prevent Gyandora's plucking from ruining equipment and pots.</td>
           </tr>
           <tr>
             <td class="seal_equipment">返</td>
             <td>×</td>
             <td>Reflect Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Reflects all thrown items, which can make it difficult to collect items.<br>However, by the time you obtain a Reflect Shield, you likely won't have<br>much need for items found on the floor, so some prefer it over Dodge Shield.<br>Can reflect Wolf Droid family bombs and Pop Tank family cannonballs.</td>
           </tr>
           <tr>
             <td class="seal_equipment">カ</td>
             <td>×</td>
             <td>Traproid Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Prevents traps from activating.<br>Great to have to avoid accidents, losing strength from Poison Traps, etc.</td>
           </tr>
           <tr>
             <td class="seal_equipment">爆</td>
             <td>○</td>
             <td>Blast Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Reduces damage from cannonballs, landmines, bomber statues, etc.<br>Stacking 弟 can be an effective counter against Pop Tank family attacks,<br>so this seal isn't exactly required, but it's nice to have to prevent<br>accidents from Big Landmines or exploding monsters from Bomber Statues.</td>
           </tr>
           <tr>
             <td class="seal_equipment">竜</td>
             <td>○</td>
             <td>Dragon Shield</td>
-            <td class="text_left"></td>
+            <td class="text_left">Effective against Dragon family special attacks.<br>Great seal to have inside Sealed Room in particular.</td>
           </tr>
           <tr>
             <td class="seal_grass">弟</td>
             <td>○</td>
             <td>Otogiriso</td>
-            <td class="text_left"></td>
+            <td class="text_left">Effectively reduces the amount of damage you receive,<br>lowering the risk of collapsing - especially early game.<br>Stacking multiple seals can allow you to heal from enemy attacks.</td>
           </tr>
           <tr>
             <td class="seal_grass">火</td>
             <td>○</td>
             <td>Flame Grass<br>Dragon Grass</td>
-            <td class="text_left"></td>
+            <td class="text_left">Easier to obtain than a Dragon Shield.<br>Can be stacked with a 竜 seal to increase fire damage reduction to 50%.</td>
           </tr>
           <tr>
             <td class="seal_scroll">帰</td>
             <td>×</td>
             <td>Retreat Scroll</td>
-            <td class="text_left"></td>
+            <td class="text_left">Nice to have if you're worried about losing your shield.<br>Remember, the seal won't take effect if the shield is inside a pot.</td>
           </tr>
           <tr>
             <td class="seal_scroll">祓</td>
             <td>×</td>
             <td>Purify Scroll</td>
-            <td class="text_left"></td>
+            <td class="text_left">Protects weapons, shields, and bracelets from getting cursed.</td>
           </tr>
           <tr>
             <td class="seal_scroll">眠</td>
             <td>○</td>
             <td>Slumber Scroll</td>
-            <td class="text_left"></td>
+            <td class="text_left">Generally more effective to have on a shield than a weapon.<br>Same chance to put enemies to sleep as a 眠 seal on a weapon.</td>
           </tr>
           <tr>
             <td class="seal_scroll">金</td>
             <td>×</td>
             <td>Plating Scroll</td>
-            <td class="text_left"></td>
+            <td class="text_left">Protects other seals from one use of Monsoon Doll's special attack.<br>Needed to protect against the loss of upgrade value due to rust.</td>
           </tr>
         </table>
         <h4 id="reflect_vs_dodge">Reflect Shield vs. Dodge Shield</h4>
+        <p>These two shields appear to be similar at first glance, but have a number of differences.<br>Let's take a look at the pros and cons.</p>
+        <dl>
+          <dt>Dodge Shield</dt>
+          <dd></dd>
+        </dl>
+        <ul>
+          <li>(+) Dodge all projectiles, and allows you to collect items after dodging them.</li>
+          <li>(+) Can dodge piercing projectiles such as Silver Arrows.</li>
+          <li>(-) Cannot dodge Cannonballs.</li>
+          <li>(-) Cannot dodge thrown monsters, possibly leading to blocked exits in situations such as a Power House.</li>
+          <li>(-) Traps activate if you're standing on one when the item falls on the ground after dodging.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Particularly dangerous if there's a Strip or Sleep Trap on the ground beneath you.</li>
+        </ul>
+        <dl>
+          <dt>Reflect Shield</dt>
+          <dd></dd>
+        </dl>
+        <ul>
+          <li>(+) Reflect most projectiles, including items and monsters.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Monsters thrown by Tiger Tosser monsters get reflected, meaning exits can't get blocked.</li>
+          <li>(+) Can reflect Cannonballs, though the explosion can still damage you.</li>
+          <li>(-) Reflected items vanish when they hit enemies, so it's not possible to collect items.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;It's fine if you don't need the item, but can be a problem if a Kappa monster throws your equipment<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;after getting disarmed by a Kengo family monster, especially inside Sealed Room.</li>
+          <li>(-) Cannot dodge piercing projectiles, including Silver Arrows and items under the effect of a Pierce Statue.</li>
+          <li>(-) Shopkeepers and Traders will attack you if a reflected Cannonball's explosion damages them.</li>
+          <li>(-) Cannot reflect items that have already been reflected once in the same turn.</li>
+          <li>(-) Slows down the pace of the game.</li>
+        </ul>
+        <dl>
+          <dt>Main Pros and Cons in Table Format</dt>
+          <dd></dd>
+        </dl>
+        <table class="table_pro_con">
+          <tr>
+            <th></th>
+            <th>Monsters</th>
+            <th>Cannonballs</th>
+            <th>Piercing Items</th>
+            <th>Collect Items</th>
+            <th>Trap Activation</th>
+          </tr>
+          <tr>
+            <th>Dodge Shield</th>
+            <td>×</td>
+            <td>×</td>
+            <td>○</td>
+            <td>○</td>
+            <td>×</td>
+          </tr>
+          <tr>
+            <th>Reflect Shield</th>
+            <td>○</td>
+            <td>○</td>
+            <td>×</td>
+            <td>×</td>
+            <td>○</td>
+          </tr>
+        </table>
         <p>Text</p>
         <h2 id="seals_caution">Seals Requiring Caution</h2>
         <h3 id="seals_caution_weapon">Weapon</h3>
