--- a/html/dungeon/hidden_hole_b.html
+++ b/html/dungeon/hidden_hole_b.html
@@ -1285,7 +1285,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1310,7 +1310,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1335,7 +1335,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td></td>
                 <td></td>
@@ -1360,7 +1360,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td></td>
                 <td></td>
@@ -1385,7 +1385,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td></td>
@@ -1410,7 +1410,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
@@ -1435,7 +1435,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
@@ -1460,7 +1460,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
@@ -1485,7 +1485,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
@@ -1510,7 +1510,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
@@ -1535,7 +1535,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
@@ -1560,7 +1560,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
@@ -1585,7 +1585,7 @@
                 <td class="monster_dragon">Archdragon<br>(1)</td>
                 <td class="monster_water">Adm. Spearfish<br>(5)</td>
                 <td class="monster_water">Sea Dragon<br>(6)</td>
-                <td class="monster_item_change">Nigiri Manager<br>(8)</td>
+                <td class="monster_item_change">Nigiri Master<br>(8)</td>
                 <td class="monster_normal">Trickster Mask<br>(2)</td>
                 <td class="monster_item_change">Monsoon Doll<br>(8)</td>
                 <td class="monster_item_change">Spiked Voodoll<br>(8)</td>
