--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -1110,7 +1110,7 @@
                 <td>☆</td>
                 <td>☆</td>
                 <td></td>
-                <td>Grass Gain Staff</td>
+                <td>Grass Gainer</td>
                 <td></td>
                 <td>☆</td>
                 <td>☆</td>
@@ -1140,7 +1140,7 @@
                 <td>☆</td>
                 <td>☆</td>
                 <td></td>
-                <td>Grass Toss Staff</td>
+                <td>Grass Tosser</td>
                 <td></td>
                 <td>☆</td>
                 <td>☆</td>
@@ -2201,7 +2201,7 @@
             </tr>
             <tr>
               <td>Staff</td>
-              <td>Swap Staff, Balance Staff, Slow Staff, Knockback Staff,<br>Miss Staff, Possession Staff, Grass Gain Staff, Grass Toss Staff</td>
+              <td>Swap Staff, Balance Staff, Slow Staff, Knockback Staff,<br>Miss Staff, Possession Staff, Grass Gainer, Grass Tosser</td>
             </tr>
             <tr>
               <td>Gitan</td>
