--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -198,7 +198,7 @@
           <p>Strength and Boost grasses if you want to defeat monsters in a single hit.<br>Note that Shihan, Gigahead, and Taurus family monsters cannot be defeated<br>in one hit even with a Kaburasutegi+99 without increasing your strength.</p>
           <p>Trapper Bracelet can be used to collect Pitfalls to use in emergencies, or to descend faster.<br>However, keep in mind that Trapper Bracelets crack more easily than other bracelets,<br>and Shiren's attack is significantly reduced while it's equipped.</p>
           <p><strong>Allies / Monster Pots</strong><br>Bringing Mamo along will effectively let you carry in 21 items instead of 11.<br>Asuka equipped with powerful items can prove to be a reliable ally, and she can catch your equipment<br>if she is behind you when a Kengo family monster disarms you with its special attack.<br>That said, Asuka can also be disarmed by Kengo monsters, so don't be surprised if she loses her equipment.<br>You might want to stick to non-upgraded basics like Ryujin Sword, Heavy Shield, and 2 Strength Bracelets<br>for Asuka so you don't get too down if that happens.</p>
-          <p>Typhoon, Nigiri Manager, Hyper Gazer, Monsoon Doll, Tiny Phoenix, and Queen Spider are good to bring with you.<br>However, be careful around Bomber Statues, Patient Bags, and Tiger Tosser family monsters<br>if there are landmines nearby, because any of those explosions can one-shot ally monsters.<br>Water Shinryu can also be used either as a freeze breath cannon, or as a wall.</p>
+          <p>Typhoon, Nigiri Master, Hyper Gazer, Monsoon Doll, Tiny Phoenix, and Queen Spider are good to bring with you.<br>However, be careful around Bomber Statues, Patient Bags, and Tiger Tosser family monsters<br>if there are landmines nearby, because any of those explosions can one-shot ally monsters.<br>Water Shinryu can also be used either as a freeze breath cannon, or as a wall.</p>
           <p>You'll likely want to bring Armordillo Pop and Shihan (or Iai) with when searching for Golden Intervals<br>so that you can obtain additional rare items and get the most out of your trip once you find one.</p>
           <h2 id="floor_guide">Floor Guide</h2>
           <p>Particularly dangerous monsters:</p>
@@ -2732,7 +2732,7 @@
                 <td>☆</td>
                 <td></td>
                 <td></td>
-                <td>Grass Gain Staff</td>
+                <td>Grass Gainer</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td></td>
@@ -2754,7 +2754,7 @@
                 <td>☆</td>
                 <td></td>
                 <td></td>
-                <td>Grass Toss Staff</td>
+                <td>Grass Tosser</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td></td>
