--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -670,7 +670,7 @@
                   <td>1350</td>
                 </tr>
                 <tr>
-                  <td><a href="/shiren2/html/item/staff.html#grass_toss_staff">Grass Toss Staff</a></td>
+                  <td><a href="/shiren2/html/item/staff.html#grass_toss_staff">Grass Tosser</a></td>
                   <td>60</td>
                   <td>1200</td>
                   <td>1260</td>
@@ -682,7 +682,7 @@
                   <td>1620</td>
                 </tr>
                 <tr>
-                  <td><a href="/shiren2/html/item/staff.html#grass_receive_staff">Grass Gain Staff</a></td>
+                  <td><a href="/shiren2/html/item/staff.html#grass_receive_staff">Grass Gainer</a></td>
                   <td>70</td>
                   <td>1400</td>
                   <td>1470</td>
