--- a/html/dungeon/halfway_well.html
+++ b/html/dungeon/halfway_well.html
@@ -1216,7 +1216,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td class="monster_ghost">Zurukichi<br>()</td>
                 <td class="monster_normal">Horse Samurai<br>()</td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1240,7 +1240,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td class="monster_ghost">Zurukichi<br>()</td>
                 <td class="monster_normal">Horse Samurai<br>()</td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -1264,7 +1264,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td class="monster_ghost">Zurukichi<br>()</td>
                 <td class="monster_normal">Horse Samurai<br>()</td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td class="monster_ghost">Pumpking<br>()</td>
                 <td></td>
                 <td></td>
@@ -1288,7 +1288,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td class="monster_ghost">Zurukichi<br>()</td>
                 <td class="monster_normal">Horse Samurai<br>()</td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td class="monster_ghost">Pumpking<br>()</td>
                 <td class="monster_one_eyed">Magma Golem<br>()</td>
                 <td></td>
@@ -1312,7 +1312,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td class="monster_ghost">Zurukichi<br>()</td>
                 <td class="monster_normal">Horse Samurai<br>()</td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td class="monster_ghost">Pumpking<br>()</td>
                 <td class="monster_one_eyed">Magma Golem<br>()</td>
                 <td></td>
@@ -1336,7 +1336,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td class="monster_ghost">Zurukichi<br>()</td>
                 <td class="monster_normal">Horse Samurai<br>()</td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td class="monster_ghost">Pumpking<br>()</td>
                 <td class="monster_one_eyed">Magma Golem<br>()</td>
                 <td class="monster_water">Sea Dragon<br>()</td>
@@ -1360,7 +1360,7 @@
                 <td class="monster_drain">Famine Puppet<br>()</td>
                 <td class="monster_ghost">Zurukichi<br>()</td>
                 <td></td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td class="monster_ghost">Pumpking<br>()</td>
                 <td class="monster_one_eyed">Magma Golem<br>()</td>
                 <td class="monster_water">Sea Dragon<br>()</td>
@@ -1384,7 +1384,7 @@
                 <td></td>
                 <td class="monster_ghost">Zurukichi<br>()</td>
                 <td></td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td class="monster_ghost">Pumpking<br>()</td>
                 <td class="monster_one_eyed">Magma Golem<br>()</td>
                 <td class="monster_water">Sea Dragon<br>()</td>
@@ -1408,7 +1408,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td class="monster_ghost">Pumpking<br>()</td>
                 <td class="monster_one_eyed">Magma Golem<br>()</td>
                 <td class="monster_water">Sea Dragon<br>()</td>
@@ -1432,7 +1432,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td class="monster_ghost">Pumpking<br>()</td>
                 <td class="monster_one_eyed">Magma Golem<br>()</td>
                 <td class="monster_water">Sea Dragon<br>()</td>
@@ -1456,7 +1456,7 @@
                 <td></td>
                 <td></td>
                 <td></td>
-                <td class="monster_item_change">Nigiri Manager<br>()</td>
+                <td class="monster_item_change">Nigiri Master<br>()</td>
                 <td class="monster_ghost">Pumpking<br>()</td>
                 <td class="monster_one_eyed">Magma Golem<br>()</td>
                 <td class="monster_water">Sea Dragon<br>()</td>
