--- a/html/dungeon/hidden_hole.html
+++ b/html/dungeon/hidden_hole.html
@@ -138,7 +138,7 @@
           <h2 id="important_items">Basic Strategy</h2>
           <p>
             The most consistent strategy is to synthesize a Leather Shield+99 (弟弟弟弟薬) using Kengo and Mixer.<br>
-            Armordillo Pop will make obtaining Otogiriso easier, and you'll also want to bring Nigiri Boss or Manager<br>along to make sure you have enough food, as it's a very time-consuming process.
+            Armordillo Pop will make obtaining Otogiriso easier, and you'll also want to bring Nigiri Boss or Master<br>along to make sure you have enough food, as it's a very time-consuming process.
           </p>
           <p>
             Of course, you don't have to use this strategy, but since this is a wiki aimed at helping players of<br>any skill level clear these dungeons, the floor guide will assume the Leather Shield strategy is being used.
