rename spear shield to halberd shield

--- a/html/dungeon/onigashima.html
+++ b/html/dungeon/onigashima.html
@@ -1927,7 +1927,7 @@
                 <td></td>
               </tr>
               <tr>
-                <td>Spear Shield</td>
+                <td>Halberd Shield</td>
                 <td></td>
                 <td></td>
                 <td></td>
