--- a/html/item/price_chart.html
+++ b/html/item/price_chart.html
@@ -1532,7 +1532,7 @@
                   <td colspan="6">Two-Handed Shields</td>
                 </tr>
                 <tr>
-                  <td><a href="/shiren2/html/item/shield.html#spear_shield">Spear Shield</a></td>
+                  <td><a href="/shiren2/html/item/shield.html#halberd_shield">Halberd Shield</a></td>
                   <td>-</td>
                   <td>7</td>
                   <td>5</td>
