--- a/html/dungeon/road_to_the_end.html
+++ b/html/dungeon/road_to_the_end.html
@@ -5663,7 +5663,7 @@
                 <td rowspan="10" colspan="7"></td>
               </tr>
               <tr>
-                <td>Spear Shield</td>
+                <td>Halberd Shield</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td></td>
@@ -5848,7 +5848,7 @@
                 <td></td>
               </tr>
               <tr>
-                <td>Spear Shield</td>
+                <td>Halberd Shield</td>
                 <td>☆</td>
                 <td>☆</td>
                 <td></td>
