--- a/html/dungeon/sealed_room.html
+++ b/html/dungeon/sealed_room.html
@@ -3374,7 +3374,7 @@
                 <td></td>
               </tr>
               <tr>
-                <td>Spear Shield</td>
+                <td>Halberd Shield</td>
                 <td></td>
                 <td>☆</td>
                 <td></td>
